--- a/bin/application/recordMenu.fxml
+++ b/bin/application/recordMenu.fxml
@@ -12,12 +12,14 @@
             <Button fx:id="buttonAllData" alignment="CENTER" layoutX="95.0" layoutY="47.0" mnemonicParsing="false" onAction="#buttonClickedAllData" text="全てのデータ" AnchorPane.leftAnchor="95.0" AnchorPane.rightAnchor="310.0" />
             <Button fx:id="buttonLatestData" contentDisplay="CENTER" layoutX="95.0" layoutY="93.0" mnemonicParsing="false" onAction="#buttonClickedLatestData" text="最新のデータ" AnchorPane.leftAnchor="95.0" AnchorPane.rightAnchor="310.0" />
             <Button fx:id="buttonSerchMemo" contentDisplay="CENTER" layoutX="95.0" layoutY="138.0" mnemonicParsing="false" onAction="#buttonClickedSerchMemo" text="メモから検索" AnchorPane.leftAnchor="95.0" AnchorPane.rightAnchor="310.0" />
-            <Button fx:id="buttonEditData" contentDisplay="CENTER" layoutX="95.0" layoutY="184.0" mnemonicParsing="false" onAction="#buttonClickedEditData" prefHeight="25.0" prefWidth="95.0" text="最新データ修正" AnchorPane.leftAnchor="95.0" AnchorPane.rightAnchor="310.0" />
-            <Button fx:id="buttonReturn" layoutX="437.0" layoutY="252.0" mnemonicParsing="false" onAction="#buttonClickedReturn" prefHeight="25.0" prefWidth="38.0" text="戻る" />
+            <Button fx:id="buttonChart" contentDisplay="CENTER" layoutX="95.0" layoutY="184.0" mnemonicParsing="false" onAction="#buttonClickedChart" prefHeight="25.0" prefWidth="95.0" text="グラフで表示" AnchorPane.leftAnchor="95.0" AnchorPane.rightAnchor="310.0" />
+            <Button fx:id="buttonReturn" layoutX="52.0" layoutY="13.0" mnemonicParsing="false" onAction="#buttonClickedReturn" prefHeight="25.0" prefWidth="38.0" text="戻る" />
             <Label layoutX="222.0" layoutY="51.0" prefHeight="17.0" prefWidth="199.0" text="：過去の全てのデータを表示します。" />
             <Label layoutX="222.0" layoutY="97.0" prefHeight="17.0" prefWidth="199.0" text="：最新のデータを表示します。" />
             <Label layoutX="222.0" layoutY="142.0" prefHeight="17.0" prefWidth="199.0" text="：メモからデータを検索します。" />
-            <Label layoutX="222.0" layoutY="188.0" prefHeight="17.0" prefWidth="199.0" text="：最新のデータの修正・削除を行います。" />
+            <Label layoutX="222.0" layoutY="188.0" prefHeight="17.0" prefWidth="199.0" text="：データをグラフで表示します。" />
+            <Button fx:id="buttonEditData1" contentDisplay="CENTER" layoutX="95.0" layoutY="227.0" mnemonicParsing="false" onAction="#buttonClickedEditData" prefHeight="25.0" prefWidth="95.0" text="最新データ修正" />
+            <Label layoutX="222.0" layoutY="231.0" prefHeight="17.0" prefWidth="199.0" text="：最新のデータの修正・削除を行います。" />
          </children>
       </AnchorPane>
    </top>
